alterando o direcioanamento para o index

--- a/HTML/telaRedirecionamentoEquipe.html
+++ b/HTML/telaRedirecionamentoEquipe.html
@@ -606,7 +606,7 @@
                     cancelButtonText: "Não",
                 }).then((result) => {
                     if (result.isConfirmed) {
-                        window.location.href = "apresentacao.html";
+                        window.location.href = "../index.html";
                     }
                 });
             }
