--- a/HTML/antes-telaInicialAluno.html
+++ b/HTML/antes-telaInicialAluno.html
@@ -345,7 +345,7 @@
                     cancelButtonText: "Não",
                 }).then((result) => {
                     if (result.isConfirmed) {
-                        window.location.href = "telaInicialONG.html";
+                        window.location.href = "../index.html";
                     }
                 });
             }
