--- a/HTML/telaInicialEquipe.html
+++ b/HTML/telaInicialEquipe.html
@@ -377,7 +377,7 @@
                 cancelButtonText: "Não",
             }).then((result) => {
                 if (result.isConfirmed) {
-                    window.location.href = "apresentacao.html";
+                    window.location.href = "../index.html";
                 }
             });
         }
