--- a/HTML/telaInicialONG.html
+++ b/HTML/telaInicialONG.html
@@ -579,7 +579,7 @@
                     cancelButtonText: "Não",
                 }).then((result) => {
                     if (result.isConfirmed) {
-                        window.location.href = "apresentacao.html";
+                        window.location.href = "../index.html";
                     }
                 });
             }
